@@ -3241,70 +3241,72 @@ if test "$LN" != ln; then
   echotab "ln buildhln/hln${TEXE} hln${TEXE}"
   echol
 fi
+echol "distrib : force $needs modular manualx clisp.c distmakefile"
+echotab "\$(RM) \$(PACKDIR)/clisp\$(PACKEXT)"
+echotab "mkdir \$(TOPDIR)"
+# General documentation files.
+echotab "${LN} ANNOUNCE COPYRIGHT GNU-GPL SUMMARY NEWS README README.de README.es MAGIC.add \$(TOPDIR)"
+# The linking sets: base and full.
+echotab "mkdir \$(TOPDIR)/base"
 if test -z "$BINARY_DISTRIB"; then
-  needs=$needs' modular manualx clisp.c distmakefile'
-  echol "distrib : force $needs"
-  echotab "\$(RM) \$(PACKDIR)/clisp\$(PACKEXT)"
-  echotab "mkdir \$(TOPDIR)"
-  echotab "${LN} ANNOUNCE COPYRIGHT GNU-GPL SUMMARY NEWS README README.de README.es MAGIC.add \$(TOPDIR)"
-  echotab ". full/makevars ; full_files='' ; for f in modules.o \$\$FILES ; do full_files=\"\$\$full_files\"' full/'\"\$\$f\" ; done ; full_libs='' ; for f in modules.o \$\$LIBS ; do case \$\$f in -*) full_libs=\"\$\$full_libs \$\$f\";; *) full_libs=\"\$\$full_libs\"' full/'\"\$\$f\";; esac ; done ; sed -e \"s,@@FULL_FILES@@,\$\$full_files,\" -e \"s,@@FULL_LIBS@@,\$\$full_libs,\" < distmakefile > \$(TOPDIR)/Makefile"
-  echotab "mkdir \$(TOPDIR)/base"
   echotab "${LN} ${FILES} modules.h modules.o makevars lispinit.mem \$(TOPDIR)/base"
-  if [ -n "$USE_GETTEXT" ] ; then
-    echotab "for f in \`find locale -type d -print\`; do mkdir \$(TOPDIR)/\$\$f; done"
-    echotab "for f in \`find locale -type f -print\`; do ${LN} \$\$f \$(TOPDIR)/\$\$f; done"
-  fi
-  echotab "mkdir \$(TOPDIR)/doc"
-  echotab "${LN} clisp.1 clisp.man clisp.html \$(TXTFILES) impnotes.html clisp.gif${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
-  echotab "mkdir \$(TOPDIR)/emacs"
-  echotab "${LN} ${SRCTOPDIR}emacs/*.el \$(TOPDIR)/emacs"
-  echotab "mkdir \$(TOPDIR)/src"
-  echotab "${LN} \$(LSPFILES) \$(FASFILES) \$(TOPDIR)/src"
-  echotab "${LN} clisp.c \$(TOPDIR)/src"
+else
+  echotab "cp lisp.run \$(TOPDIR)/base/lisp.run"
+  # Don't strip the executable, otherwise (disassemble #'cons) won't work.
+  # echotab "strip \$(TOPDIR)/base/lisp.run"
+  echotab "chmod a+x \$(TOPDIR)/base/lisp.run"
+  echotab "${LN} lispinit.mem \$(TOPDIR)/base"
+fi
+echotab "mkdir \$(TOPDIR)/full"
+if test -z "$BINARY_DISTRIB"; then
+  echotab "${LN} "'`'". full/makevars ; for f in \$\$FILES modules.h modules.o makevars lispinit.mem ; do echo full/\$\$f ; done"'`'" \$(TOPDIR)/full"
+else
+  echotab "cp full/lisp.run \$(TOPDIR)/full/lisp.run"
+  # Don't strip the executable, otherwise (disassemble #'cons) won't work.
+  # echotab "strip \$(TOPDIR)/full/lisp.run"
+  echotab "chmod a+x \$(TOPDIR)/full/lisp.run"
+  echotab "${LN} full/lispinit.mem \$(TOPDIR)/full"
+fi
+# The Makefile, generated from distmakefile.
+if test -z "$BINARY_DISTRIB"; then
+  echotab ". full/makevars ; full_files='' ; for f in modules.o \$\$FILES ; do full_files=\"\$\$full_files\"' full/'\"\$\$f\" ; done ; full_libs='' ; for f in modules.o \$\$LIBS ; do case \$\$f in -*) full_libs=\"\$\$full_libs \$\$f\";; *) full_libs=\"\$\$full_libs\"' full/'\"\$\$f\";; esac ; done ; sed -e \"s,@@FULL_FILES@@,\$\$full_files,\" -e \"s,@@FULL_LIBS@@,\$\$full_libs,\" < distmakefile > \$(TOPDIR)/Makefile"
+else
+  echotab "${LN} distmakefile \$(TOPDIR)/Makefile"
+fi
+# Architecture independent data files.
+if [ -n "$USE_GETTEXT" ] ; then
+  echotab "for f in \`find locale -type d -print\`; do mkdir \$(TOPDIR)/\$\$f; done"
+  echotab "for f in \`find locale -type f -print\`; do ${LN} \$\$f \$(TOPDIR)/\$\$f; done"
+fi
+echotab "mkdir \$(TOPDIR)/data"
+echotab "${LN} data/* \$(TOPDIR)/data"
+echotab "mkdir \$(TOPDIR)/doc"
+echotab "${LN} clisp.1 clisp.man clisp.html \$(TXTFILES) impnotes.html clisp.gif${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
+echotab "mkdir \$(TOPDIR)/emacs"
+echotab "${LN} ${SRCTOPDIR}emacs/*.el \$(TOPDIR)/emacs"
+echotab "mkdir \$(TOPDIR)/src"
+echotab "${LN} \$(LSPFILES) \$(FASFILES) \$(TOPDIR)/src"
+if test -z "$BINARY_DISTRIB"; then
   echotab "${LN} clisp-link \$(TOPDIR)"
   echotab "mkdir \$(TOPDIR)/linkkit"
   echotab "${LN} modules.d modules.c clisp.h \$(TOPDIR)/linkkit"
   echotab "for module in '' \$(MODULES); do if test -n \"\$\$module\"; then \\"
   echotab "  (dir=\$(TOPDIR)/ ; for subdir in "'`'"echo \$\$module/ | sed -e 's,/, ,g'"'`'" ; do dir=\$\${dir}\$\${subdir} ; test -d \$\${dir} || mkdir \$\${dir} ; dir=\$\${dir}/ ; done ; cd \$\$module ; dots="'`'"echo \$\$module/ | sed -e 's,[^/][^/]*//*,../,g'"'`'" ; \$(MAKE) clisp-module-distrib distribdir=\$\${dots}\$(TOPDIR)/\$\$module LN="`if test "$LN" = ln; then echo 'ln'; else echo '$${dots}hln'; fi`") \\"
   echotab "fi; done"
-  echotab "mkdir \$(TOPDIR)/full"
-  echotab "${LN} "'`'". full/makevars ; for f in \$\$FILES modules.o modules.h makevars lispinit.mem ; do echo full/\$\$f ; done"'`'" \$(TOPDIR)/full"
-  echotab "chmod a+r \$(TOPDIR) \$(TOPDIR)/* \$(TOPDIR)/*/*"
-  echotab "chmod a+x \$(TOPDIR)/. \$(TOPDIR)/*/."
-  echotab "\$(PACK) \$(PACKOPT) \$(PACKDIR)/clisp\$(PACKEXT) \$(TOPDIR)"
-  echotab "\$(RM) -r \$(TOPDIR)"
-  echol
+fi
+# For building the `clisp' executable.
+if test -z "$BINARY_DISTRIB"; then
+  echotab "${LN} clisp.c \$(TOPDIR)/src"
 else
-  needs=$needs' manualx distmakefile'
-  echol "distrib : force $needs"
-  echotab "\$(RM) \$(PACKDIR)/clisp\$(PACKEXT)"
-  echotab "mkdir \$(TOPDIR)"
-  echotab "${LN} ANNOUNCE COPYRIGHT GNU-GPL SUMMARY NEWS README README.de README.es MAGIC.add \$(TOPDIR)"
-  echotab "${LN} distmakefile \$(TOPDIR)/Makefile"
-  echotab "mkdir \$(TOPDIR)/base"
-  echotab "cp lisp.run \$(TOPDIR)/base/lisp.run"
-  # Don't strip the executable, otherwise (disassemble #'cons) won't work.
-  # echotab "strip \$(TOPDIR)/base/lisp.run"
-  echotab "chmod a+x \$(TOPDIR)/base/lisp.run"
-  echotab "${LN} lispinit.mem \$(TOPDIR)/base"
-  if [ -n "$USE_GETTEXT" ] ; then
-    echotab "for f in \`find locale -type d -print\`; do mkdir \$(TOPDIR)/\$\$f; done"
-    echotab "for f in \`find locale -type f -print\`; do ${LN} \$\$f \$(TOPDIR)/\$\$f; done"
-  fi
-  echotab "mkdir \$(TOPDIR)/doc"
-  echotab "${LN} clisp.1 clisp.man clisp.html \$(TXTFILES) impnotes.html clisp.gif${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
-  echotab "mkdir \$(TOPDIR)/emacs"
-  echotab "${LN} ${SRCTOPDIR}emacs/*.el \$(TOPDIR)/emacs"
-  echotab "mkdir \$(TOPDIR)/src"
-  echotab "${LN} \$(LSPFILES) \$(FASFILES) \$(TOPDIR)/src"
   echotab_to_HEXE "\$(CC) \$(CFLAGS) \$(CLFLAGS) -DLISPLIBDIR='\"$(lisplibdir)\"' -DLOCALEDIR='\"$(localedir)\"'" clisp.c "\$(TOPDIR)/clisp"
   echotab_to_HEXE "\$(CC) \$(CFLAGS) \$(CLFLAGS)" "${UTILDIR_CC}hardcode.c" "\$(TOPDIR)/hardcode"
-  echotab "chmod a+r \$(TOPDIR) \$(TOPDIR)/* \$(TOPDIR)/*/*"
-  echotab "chmod a+x \$(TOPDIR)/. \$(TOPDIR)/*/."
-  echotab "\$(PACK) \$(PACKOPT) \$(PACKDIR)/clisp\$(PACKEXT) \$(TOPDIR)"
-  echotab "\$(RM) -r \$(TOPDIR)"
-  echol
 fi
+# Final packing.
+echotab "chmod a+r \$(TOPDIR) \$(TOPDIR)/* \$(TOPDIR)/*/*"
+echotab "chmod a+x \$(TOPDIR)/. \$(TOPDIR)/*/."
+echotab "\$(PACK) \$(PACKOPT) \$(PACKDIR)/clisp\$(PACKEXT) \$(TOPDIR)"
+echotab "\$(RM) -r \$(TOPDIR)"
+echol
 echol
 fi
 if [ $HSYS = acorn ] ; then
